--- a/css/index/style.css
+++ b/css/index/style.css
@@ -252,6 +252,14 @@ body {
   background-color: var(--bg-white-1-color);
   width: 100%;
   height: 130px;
+  z-index: 100;
+  position: fixed;
+  top: 0;
+  left: 0;
+  transition: box-shadow ease-in 0.2s;
+}
+.shadow {
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 .header_container {
   text-align: center;
@@ -338,6 +346,7 @@ body {
 
 /* main */
 #main {
+  margin-top: 90px;
   background-color: var(--bg-white-1-color);
 }
 .main_container {
